# hammerhead-downloader

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
openspec/: AGENTS.md  project.md
openspec/changes/archive/2026-03-20-add-activity-webhook/: proposal.md  tasks.md
openspec/changes/archive/2026-03-20-add-activity-webhook/specs/activity-webhook/: spec.md
openspec/changes/archive/2026-03-20-add-latest-download-command/: proposal.md  tasks.md
openspec/changes/archive/2026-03-20-add-latest-download-command/specs/latest-download/: spec.md
openspec/changes/archive/2026-03-20-add-list-rides-command/: proposal.md  tasks.md
openspec/changes/archive/2026-03-20-add-list-rides-command/specs/rides-list/: spec.md
openspec/changes/archive/2026-03-23-add-precommit-hooks/: proposal.md  tasks.md
openspec/changes/archive/2026-03-23-add-precommit-hooks/specs/precommit-hooks/: spec.md
openspec/changes/archive/2026-03-23-add-repo-protection/: proposal.md  tasks.md
openspec/changes/archive/2026-03-23-add-repo-protection/specs/github-protection/: spec.md
openspec/specs/activity-webhook/: spec.md
openspec/specs/github-protection/: spec.md
openspec/specs/latest-download/: spec.md
openspec/specs/precommit-hooks/: spec.md
openspec/specs/rides-list/: spec.md
src/hammerdownloader/: __init__.py  cli.py  client.py  webhook.py
tests/: test_cli.py  test_client.py  test_webhook.py
